--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./ejercicios/ejercicio 1/css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,16 +60,18 @@
       </div>
     </div>
     &nbsp
-    <p class="fuente">Antes de dejar el mundo que crearon, las tres diosas crearon la Trifuerza, un objeto mágico formado por tres triángulos dorados y 
+    &nbsp
+    &nbsp
+    <blockquote class="blockquote">
+      <p class="fuente">Antes de dejar el mundo que crearon, las tres diosas crearon la Trifuerza, un objeto mágico formado por tres triángulos dorados y 
         se lo confió a la diosa Hylia.
     </p>
-    &nbsp
-    <p class="fuente">La Trifuerza concede un deseo a aquellos que poseen las tres virtudes de las diosas: Poder, Sabiduría y Valor. 
+    <p class="fuente">La Trifuerza concede un deseo a aquellos que poseen las tres virtudes de las diosas:<strong> Poder, Sabiduría y Valor.</strong> 
     </p>
     <p class ="fuente">Si uno no tiene el equilibrio adecuado de virtudes, la Trifuerza se dividirá en tres partes.Solo reuniendo las tres piezas se podrá obtener el verdadero poder de la Trifuerza.</p>
     &nbsp
     <p class="strong">A lo largo del tiempo, la Trifuerza ha elegido a unos pocos para ejercer sus poderes individuales: </p>
-
+  </blockquote>
     <div class="image">
       
           <figure class="figure">
