--- a/pages/Personajes.html
+++ b/pages/Personajes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="./ejercicios/ejercicio 1/css/style.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,9 +31,9 @@
     </header>
   
 <main>
-    <div>
-        <p class="fuente">A lo largo de las diferentes historias, nos encontraremos con diferentes individuos</p>
-    </div>
+  <blockquote class="blockquote">
+    <p class="fuente">A lo largo de las diferentes historias, nos encontraremos con diferentes individuos</p>
+   </blockquote>
     &nbsp
     <div class="container text-center">
   <div class="row">
