--- a/pages/NuevoJuego.html
+++ b/pages/NuevoJuego.html
@@ -5,66 +5,74 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Link, Zelda, Ganondorf, Trifuerza, The Legend Of Zelda">
+        <link rel="shortcut icon" href="../assets/icon/d.png" type="image/x-icon">
+        <meta keyboard="Link, Zelda, Ganondorf">
         <title>The Legend Of Zelda</title>
             <link rel="stylesheet" href="../css/styles.css">
             <link rel="stylesheet" href="../assets/icon/28135-8-the-legend-of-zelda-logo-clipart.png">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         </head>
 <body>
-    <section class=".body1">
-        <header id ="header">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                    <div class="container-fluid">
-                    <img src="../assets/icon/Icon.png" width="100" height="100">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                          <a class="nav-link" href="../pages/Personajes.html">Personajes</a>
-                          <a class="nav-link disabled" href="../pages/LineasTiempo.html">Linea de Tiempo</a>
-                          <a class="nav-link disabled" href="../pages/NuevoJuego.html">Tears Of The Kingdom</a>
-                        </div>
-                      </div>
-                    </div>
-                  </nav>
-        </header>
-<main>
+    
+  <section class=".body1">
+
+  <header id ="header">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
+        <div class="container-fluid">
+          <img src="../assets/icon/d.png" class="icon">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/Personajes.html">Personajes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/LineasTiempo.html">Linea de Tiempo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/NuevoJuego.html">Tears Of The Kingdom</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+  </header>
+
+<main>  
+   <section class="testa">
+    <img src="../assets/img/TOTK1.png" alt="zelda">
+    <img src="../assets/img/TOTK2.jpg" alt="link">
+    <img src="../assets/img/TOTKganon.jpg" alt="Ganon">
+    <img src="../assets/img/TOTK3.png" alt="sonia">
+    <img src="../assets/img/TOKT4.jpg" alt="rauru">
+  </section>
     &nbsp
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/2SNF4M_v7wc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    <iframe width="60%" height="500px" src="https://www.youtube.com/embed/2SNF4M_v7wc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
     </iframe>
     <figure class="text-center">
-        <blockquote class="blockquote">
+      <br>
+      <h1 class="titulo"> Tears Of The Kingdom</h1>
+      <br>
+      <div class="container text-center">
           <p class="fuente"> Tras los acontecimientos de The Legend of Zelda: Breath of the Wild, la princesa Zelda junto a Link exploran un templo subterráneo en el que descubren que se encuentra un cadáver momificado.Después de que el cadáver tome vida y se levante,
             logrando elevar el castillo de Hyrule, Link deberá encontrar a la princesa Zelda y así salvar al reino de Hyrule de las garras de Ganondorf.
+            <br>
+            The Legend Of Zelda: Tears Of The Kingdom te sumerge de nuevo en un caótico Hyrule, lleno de monstruos y Koroks con mochila. Mientras exploras el reino, te encontrarás con muchos lugares familiares de Breath of the Wild.
+             Pronto quedará claro que ha pasado algo de tiempo.
             </p>
-        </blockquote>
-
-        <section>
-            <div class="conteiner1">
-                <div class="container text-center ">
-                    <div class="row">
-                    <div class="row mt-4">
-                      <div class="collage col">
-                        <img src="../assets/img/Link-fights-enemey-Tears-of-the-Kingdom.webp" alt="">
-                      </div>
-                      <div class="collage col">
-                        <img src="../assets/img/zelda-botw.webp" alt="">
-                      </div>
-                      <div class="collage col">
-                        <img src="../assets/img/grid2.webp" alt="">
-                    </div>
-                      </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+          </div>
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-<div>
+<br>
+<div class= "container text-center">
     <a href="https://www.nintendo.com/es-ar/store/products/the-legend-of-zelda-tears-of-the-kingdom-switch/">
     <img src="../assets/icon/nintendo_logo.png" class ="icon" alt="Nintendo">
       </a>
