--- a/pages/Personajes.html
+++ b/pages/Personajes.html
@@ -5,55 +5,66 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Link, Zelda, Ganondorf, Trifuerza, The Legend Of Zelda">
+        <link rel="shortcut icon" href="../assets/icon/d.png" type="image/x-icon">
+        <meta keyboard="Link, Zelda, Ganondorf">
         <title>The Legend Of Zelda</title>
             <link rel="stylesheet" href="../css/styles.css">
             <link rel="stylesheet" href="./assets/icon/28135-8-the-legend-of-zelda-logo-clipart.png">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         </head>
 <body>
-    <header id ="header">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-            <img src="../assets/icon/Icon.png" width="100" height="100">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  <a class="nav-link" href="../pages/Personajes.html">Personajes</a>
-                  <a class="nav-link disabled" href="../pages/LineasTiempo.html">Linea de Tiempo</a>
-                  <a class="nav-link disabled" href="../pages/NuevoJuego.html">Tears Of The Kingdom</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-  
+  <header id ="header">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
+        <div class="container-fluid">
+          <img src="../assets/icon/d.png" class="icon">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/Personajes.html">Personajes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/LineasTiempo.html">Linea de Tiempo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/NuevoJuego.html">Tears Of The Kingdom</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+  </header>
 <main>
-  <blockquote class="blockquote">
+  <br>
+  <div class="container text-center">
     <p class="fuente">A lo largo de las diferentes historias, nos encontraremos con diferentes individuos</p>
-   </blockquote>
+   </div>
     &nbsp
     <div class="container text-center">
   <div class="row">
     <div class="col">
-        <img src="../assets/img/Princesa_Zelda_arte_Hyrule_Warriors_Age_of_Calamity.png" class="icon">
+        <img src="../assets/img/Princesa_Zelda_arte_Hyrule_Warriors_Age_of_Calamity.png" class="personajes">
         <figcaption>Zelda</figcaption>
         <figcaption>La princesa de Hyrule,portadora de la trifuerza de la Sabiduría.</figcaption>
       </div>
       <div class="col">   
-          <img src="../assets/img/TotK_Link_Artwork.png" class="icon">
+          <img src="../assets/img/TotK_Link_Artwork.png" class="personajes">
           <figcaption>Link</figcaption>
           <figcaption>Un noble aventurero,portador de la trifuerza del Valor.</figcaption>
         </div>
         <div class="col">
-            <img src="../assets/img/TotK_Demon_King_Ganondorf_Artwork.png" class="icon">
+            <img src="../assets/img/TotK_Demon_King_Ganondorf_Artwork.png" class="personajes">
             <figcaption>Ganondorf</figcaption>
         <figcaption>El Rey demonio, quien busca aniquilar Hyrule,portador de la trifuerza del Poder.</figcaption>
         </div>
       <div class="col">
-          <img src="../assets/img/BotW_Calamity_Ganon_Artwork.webp" class="icon">
+          <img src="../assets/img/BotW_Calamity_Ganon_Artwork.webp" class="personajes">
           <figcaption>Ganon</figcaption>
         <figcaption>La manifestación de la maldad pura</figcaption>
       </div>  
@@ -61,29 +72,29 @@
   &nbsp
   <div class="row">
     <div class="col">
-        <img src="../assets/img/HWEC_-_Daruk_Artwork.webp" class="icon">
+        <img src="../assets/img/HWEC_-_Daruk_Artwork.webp" class="personajes">
         <figcaption>Goron</figcaption>
         <figcaption>Una raza poderosa pero en su mayoría pacífica de habitantes de las montañas.</figcaption>
       </div>
       <div class="col">   
-          <img src="../assets/img/Urbosa.webp" class="icon">
+          <img src="../assets/img/Urbosa.webp" class="personajes">
           <figcaption>Gerudo</figcaption>
         <figcaption>Una tribu solitaria compuesta casi exclusivamente por mujeres. En gran medida, se mantienen en la región desértica y han permanecido pacíficos con la gente de Hyrule.</figcaption>
         </div>
       <div class="col">
-          <img src="../assets/img/Mipha.webp" class="icon">
+          <img src="../assets/img/Mipha.webp" class="personajes">
         <figcaption>Zora</figcaption>
         <figcaption>Una raza acuática, Zoras han sido amigos y enemigos de la Familia Real de Hyrule.</figcaption>
       </div>
     <div class="col">
-        <img src="../assets/img/Revali.webp" class="icon">
+        <img src="../assets/img/Revali.webp" class="personajes">
         <figcaption>Rito</figcaption>
         <figcaption>Una orgullosa raza de personas parecidas a pájaros que evolucionaron a partir de los Zora,los Rito se elevan por el cielo con sus enormes alas.</figcaption>
     </div>
     &nbsp
     <div class="row">
         <div class="col">
-            <img src="../assets/img/GFariesAOC.webp" class="icon">
+            <img src="../assets/img/GFariesAOC.webp" class="personajes">
           <figcaption>Las Grandes Hadas</figcaption>
           <figcaption>Grandes hadas humanoides conocidas por sus poderes curativos, ayudan a los aventureros necesitados y pueden regalarles poderes mágicos.</figcaption>
         </div>
