--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Es una pagina dedicada al juego The Legend Of Zelda">
+    <meta name="description" content="Te invito a ver mi proyecto, es una pagina dedicada al juego The Legend Of Zelda">
     <link rel="shortcut icon" href="../assets/icon/d.png" type="image/x-icon">
     <meta keyboard="Link, Zelda, Ganondorf">
     <title>The Legend Of Zelda</title>
